--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,21 @@
-apturl==0.5.2
 asgiref==3.2.7
-astroid==2.4.1
-Babel==2.6.0
-bcrypt==3.1.7
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distro==1.4.0
-distro-info===0.23ubuntu1
-Django==3.0.5
-entrypoints==0.3
-httplib2==0.14.0
-idna==2.8
-isort==4.3.21
-keyring==18.0.1
-keyrings.alt==3.4.0
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-mccabe==0.6.1
-netifaces==0.10.4
-numpy==1.17.4
-oauth==1.0.1
-oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==3.6.1
-psutil==5.5.1
-pyasn1==0.4.2
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==1.7.1
-pylint==2.5.2
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyRFC3339==1.1
-python-apt==2.0.0
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-speaklater==1.4
+cycler==0.10.0
+decorator==4.4.2
+Django==3.0.6
+django-cleanup==4.0.0
+imageio==2.8.0
+kiwisolver==1.2.0
+matplotlib==3.2.1
+networkx==2.4
+numpy==1.18.4
+opencv-python==4.2.0.34
+Pillow==7.1.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+PyWavelets==1.1.1
+scikit-image==0.17.2
+scipy==1.4.1
+six==1.15.0
 sqlparse==0.3.1
-sshtunnel==0.1.4
-systemd-python==234
-toml==0.10.0
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-vboxapi==1.0
-wadllib==1.3.3
-wrapt==1.12.1
-WTForms==2.2.1
-xkit==0.0.0
-zope.interface==4.7.1
+tifffile==2020.5.25
