--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,39 @@
 asgiref==3.2.7
+astroid==2.4.1
+Babel==2.6.0
+bcrypt==3.1.7
+blinker==1.4
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
 cycler==0.10.0
 decorator==4.4.2
 Django==3.0.6
 django-cleanup==4.0.0
+dlib==19.19.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+idna==2.9
 imageio==2.8.0
+install-requires==0.3.0
 kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
 matplotlib==3.2.1
 networkx==2.4
 numpy==1.18.4
 opencv-python==4.2.0.34
 Pillow==7.1.2
+pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 PyWavelets==1.1.1
+requests==2.23.0
 scikit-image==0.17.2
 scipy==1.4.1
 six==1.15.0
 sqlparse==0.3.1
 tifffile==2020.5.25
+urllib3==1.25.9
+wrapt==1.12.1
